--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,15 @@
+nfl-data-py==0.3.0
+nltk==3.7
 numpy==1.23.3
+oauthlib==3.2.1
+packaging==21.3
 pandas==1.5.0
+pyparsing==3.0.9
+PySocks==1.7.1
 python-dateutil==2.8.2
+pytz==2022.2.1
+regex==2022.9.13
 requests==2.26.0
 requests-oauthlib==1.3.1
-tweepy==4.0
+tweepy==4.0.0
 urllib3==1.26.6
